; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_font_renderer/extr_freetype.c_font_renderer_ft_get_atlas.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_font_renderer/extr_freetype.c_font_renderer_ft_get_atlas.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.font_atlas = type { i32 }
%struct.TYPE_2__ = type { %struct.font_atlas }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.font_atlas* (i8*)* @font_renderer_ft_get_atlas to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.font_atlas* @font_renderer_ft_get_atlas(i8* %0) #0 {
  %2 = alloca %struct.font_atlas*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = bitcast i8* %5 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %6, %struct.TYPE_2__** %4, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %8 = icmp ne %struct.TYPE_2__* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.font_atlas* null, %struct.font_atlas** %2, align 8
  br label %13

10:                                               ; preds = %1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store %struct.font_atlas* %12, %struct.font_atlas** %2, align 8
  br label %13

13:                                               ; preds = %10, %9
  %14 = load %struct.font_atlas*, %struct.font_atlas** %2, align 8
  ret %struct.font_atlas* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
